--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,37 @@
-version: '3.8'
-
+version: '3'
 services:
-  keycloak:
-    image: quay.io/keycloak/keycloak:latest
-    container_name: keycloak
+  zookeeper:
+    image: confluentinc/cp-zookeeper:latest
     environment:
-      - KEYCLOAK_ADMIN=admin
-      - KEYCLOAK_ADMIN_PASSWORD=admin
-      - KC_PROXY=edge
+      ZOOKEEPER_CLIENT_PORT: 2181
+      ZOOKEEPER_TICK_TIME: 2000
     ports:
-      - "8081:8080"
-    command:
-      - start-dev
-      - --import-realm
-    volumes:
-      - ./keycloak-realm.json:/opt/keycloak/data/import/realm.json:ro
+      - "2181:2181"
+    networks:
+      - kafka-net
 
+  kafka:
+    image: confluentinc/cp-kafka:latest
+    depends_on:
+      - zookeeper
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: 1
+      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,PLAINTEXT_HOST:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://localhost:9092
+      KAFKA_LISTENERS: PLAINTEXT://kafka:29092,PLAINTEXT_HOST://0.0.0.0:9092
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
+      KAFKA_AUTO_CREATE_TOPICS_ENABLE: 'true'
+    networks:
+      - kafka-net
+  zipkin:
+    container_name: zipkin1
+    image: openzipkin/zipkin:2.24.2
+    ports:
+      - "9411:9411"
+
+networks:
+  kafka-net:
+    driver: bridge 
